k8s/bottle.yaml
apiVersion: v1
kind: Service
metadata:
  name: bottle-service
spec:
  selector:
    app: bottle-app
  ports:
  - protocol: "TCP"
    port: 5000
    targetPort: 8000
  type: LoadBalancer

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bottle-app
spec:
  selector:
    matchLabels:
      app: bottle-app
  replicas: 1
  template:
    metadata:
      labels:
        app: bottle-app
    spec:
      containers:
      - name: bottle-app
        image: asamirr/todo-backend:v2
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8000
