k8s/vue.yaml
apiVersion: v1
kind: Service
metadata:
  name: vue-service
spec:
  selector:
    app: vue-app
  ports:
  - protocol: "TCP"
    port: 3000
    targetPort: 8080
  type: LoadBalancer

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vue-app
spec:
  selector:
    matchLabels:
      app: vue-app
  replicas: 1
  template:
    metadata:
      labels:
        app: vue-app
    spec:
      containers:
      - name: vue-app
        image: asamirr/todo-client:v3
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
