k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-ingress
  annotations: 
      kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: ahmed.to
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: vue-service
            port:
              number: 3000
      - path: /task
        pathType: Prefix
        backend:
          service:
            name: bottle-service
            port:
              number: 5000
